[package]
name = "learning_2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1.0.197", features = ["derive"]}
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
argon2 = "0.5"
rand_core = "0.6"
rand = "0.9.1"
lettre = "0.11.16"
serde_with = { version = "3.3", features = ["base64"] }
